# wordle_haskell

./: README.md  wordle.cabal
.github/workflows/: actions.yml
.stack-work/: stack.sqlite3
.stack-work/ghci/1b43b93d/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6/8546fbdf64eac3615a017de682f5528c5c2904cc831cc9fafbe5ea503f3ebbee/9.0.2/lib/x86_64-linux-ghc-9.0.2/wordle-0.1.0.0-6gke00fwyGF21D0sjis1F4/: Jogo.dyn_hi  Main.hi
.stack-work/install/x86_64-linux-tinfo6/8546fbdf64eac3615a017de682f5528c5c2904cc831cc9fafbe5ea503f3ebbee/9.0.2/pkgdb/: package.cache  wordle-0.1.0.0-6gke00fwyGF21D0sjis1F4.conf
src/: Jogo.hs  Main.hs
test/: Spec.hs
