name:                wordle
version:             0.1.0.0
description:         Please see the README on GitHub at <https://github.com/jairojuunior/wordle_haskell#readme>
homepage:            https://github.com/jairojuunior/wordle_haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Jairo da Silva Freitas Júnior
copyright:           2022 Jairo da Silva Freitas Júnior
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules:
      Jogo
      Main
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , brick
    , cursor
    , directory
    , random
    , tasty
    , tasty-hunit
    , time
    , vty
  default-language: Haskell2010

executable wordle
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
      Jogo
      Paths_wordle
  default-language:    Haskell2010
  build-depends:       
    base >=4.7 && <5
    , brick
    , cursor
    , directory
    , random
    , tasty
    , tasty-hunit
    , time
    , vty
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N

test-suite wordle-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , brick
    , cursor
    , directory
    , wordle
    , random
    , tasty
    , tasty-hunit
    , time
    , vty
  default-language: Haskell2010